--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,6 @@
     <dimen name="margin">15dp</dimen>
     <dimen name="hint_size">15sp</dimen>
     <dimen name="padding">10dp</dimen>
+    <dimen name="button_size">130dp</dimen>
+    <dimen name="width_data">270dp</dimen>
 </resources>
